fix spacing for post icons

--- a/app/BigComponents/NavBar/navbar.module.css
+++ b/app/BigComponents/NavBar/navbar.module.css
@@ -52,7 +52,7 @@
 }
 
 .search {
-    margin-right: -14px;
+    margin-right: -20px;
 }
 
 .search, .profile {
